--- a/viz/package.json
+++ b/viz/package.json
@@ -3,8 +3,8 @@
 "version": "1.0.0",
 "license": "MIT",
 "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "parcel html/visualisasi.html",
+    "build": "parcel build html/visualisasi.html"
 },
 "devDependencies": {
     "parcel": "^2.6.2"
